# crossheart-designer

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  app_manager.gd  background.png.import  export_presets.cfg  icon.svg.import  knot8.png.import  main.tscn  pfdserver.gdextension.uid  project.godot  sprites.png.import  tile.png.import  tile16.png.import  tile8.png.import
commands/: add_layer_command.gd  add_layer_command.gd.uid  add_thread_command.gd  brush_stroke_command.gd  command.gd  command_manager.gd  erase_command.gd  fill_command.gd.uid  move_layer_command.gd  remove_layer_command.gd  remove_layer_command.gd.uid  remove_thread_command.gd  remove_thread_command.gd.uid  rename_layer_command.gd  select_layer_command.gd  select_layer_command.gd.uid  select_thread_command.gd  select_thread_command.gd.uid  swap_thread_command.gd  toggle_layer_locked_command.gd.uid  toggle_layer_visible_command.gd  toggle_layer_visible_command.gd.uid
content/: app_manager.gd  camera.gd  extensions.gd  extensions.gd.uid  globals.gd  globals.gd.uid  grid.gd  grid.gd.uid  layer.tscn  signal_bus.gd  signal_bus.gd.uid
cursor/: cursor_none.png.import  drawing_bucket.png.import  drawing_picker.png.import
gdextension/: CMakeLists.txt  HaruClass.cpp  HaruClass.h  PdfServer.cpp  PdfServer.h  RegisterExtension.cpp  haru.gdextension  main.cpp  pfdserver.gdextension
icons/: LayerButtonContainer.svg.import  ThreadButton.svg.import  ThreadButtonContainer.svg.import  thread_green.svg.import
resources/: DMC310.tres  DMC3831.tres  DMCB5200.tres  arbys.jpg.import  dmc_colors.json  (+1 more)
(+384 files in other folders)
